# statesman-store

./: .buildinfo  .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  appserver.py  genindex.html  index.html  main.html  objects.inv  requirements.txt  run.sh  search.html  searchindex.js  setup.cfg  setup.py  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: debug.yml  docker-build.yml  python-ci.yml  python-pr.yml  python-update-reqs.yml
_sources/: index.rst.txt
application/: __init__.py  config.py  constants.py  main.py
application/blueprints/: __init__.py
application/blueprints/api/: __init__.py
application/controllers/actions/: add.py  adjust.py  create.py  current.py  dec.py  decrement.py  default.py  help.py  inc.py  increment.py  items.py  label.py  list.py  permission.py  reset.py  set.py  spend.py  sub.py  subtract.py  unset.py  use.py
application/db/: __init__.py
application/models/: constants.py  state_collection.py  state_item.py  user.py
application/utils/: __init__.py  access.py  action.py  args.py  collection.py  item.py  slack.py  user.py
db/ddl/: 01_item_permissions.sql  01_state_collections.sql  02_state_collections.sql  02_users.sql  03_collection_permissions.sql  03_users.sql  04_collection_permissions.sql  04_state_items.sql  05_item_permissions.sql  05_state_items.sql
discord-relay/: run.sh
discord-relay/relayapp/: __init__.py  __main__.py  constants.py
docs/: conf.py  index.rst
flask-app/: requirements.txt  run.sh
flask-app/application/: constants.py  main.py
kubernetes/base/: configmaps.yaml  deployment.yaml  kustomization.yaml  service-account.yaml  service-entries.yaml  service.yaml
migrations/versions/: 3c3d89862429_.py
requirements/: app.in  app.txt  deploy.txt  dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt
scripts/: add-discord-to-server.sh  entrypoint.sh  init-db.sh  local-dev.sh  migrate-db.sh  run-bot-docker-linux.sh  run-bot-docker-local.sh  run-bot-local.sh  run-docker-linux.sh  run-docker-local.sh  run-local.sh  run-relay-docker-local.sh  start-docker-deps.sh  sync-to-psw1.sh  update-requirements.sh
scripts/docker/: docker-compose.yml
src/: .flaskenv  appserver.py  flask-app.ini  manage.py  wsgi.py
src/migrations/: env.py
src/statesman/: __init__.py  config.py  constants.py  main.py
src/statesman_api/: __init__.py  config.py  constants.py  main.py
src/statesman_store/: __init__.py  config.py  constants.py  main.py
tests/: test_this.py
(+165 files in other folders)
