[bdist_wheel]
universal = 1

[metadata]
name = statesman-store
version = attr: statesman_api.__version__
url = https://pilgrimagesoftware.com
project_urls =
    Documentation = https://pilgrimagesoftware.github.io/pilgrimagesoftware/statesman-store
license = MIT
author = Paul Schifferer
author_email = admin@pilgrimagesoftware.com
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
package_dir = = src
include_package_data = true
python_required = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    statesman-store = statesman_api.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    statesman_api
    tests

[coverage:paths]
source =
    src
    */site-packages

[semantic_release]
version_variable = src/statesman_api/__init__.py:__version__
branch = develop
upload_to_pypi = False
